Review af.donoso

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
 <!-- Barra de navegación / banner  -->
+<!-- Podrías hacer que el navbar se quede pegado a la parte superior de la página, para que facilite la navegación.-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <img src="/src/luchador.jpg" width="25" height="25" class="d-inline-block align-top" alt="">
@@ -39,7 +40,8 @@
                     <!--Who am i-->
                     <div class="col-12"><h2 id="wai">Who am I? </h2></div>
                     <div class="col-12">
-                     <div class="row">                    
+                     <div class="row">
+                         <!-- Puedes hacer que tanto la imagen como el texto estén uno al lado del otro utilizando los cols de Bootstrap. También se puede con inline, pero no pude hacerlo, así que no sé dónde se pondría.-->                    
                      <div class="col-12">                      
                         <img src = "/src/andresillo.jpg" width= "100px" height= "100px" alt="Facebook profile picture">
                         <br>
