--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+
+<!-- Es mejor no poner experiencia, si no se tiene -->
 <html lang="en">
   <head>
     <!-- Required meta tags -->
