--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--Encuentro el código organizado y legible me gusta.
+Lo único respecto es que pudo haber hecho mas columnas para presentar mejor la información
+pero de resto bien-->
 <!doctype html>
 <html lang="en">
   <head>
