Review jd.tamara

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                     <!--Who am i-->
                     <div class="col-12"><h2 id="wai">Who am I? </h2></div>
                     <div class="col-12">
-                     <div class="row">                    
+                     <div class="row"> 
+                     <!-- Modificar la forma en la que se organiza la informacion para que no quede espacio en blanco, ejemplo la imagen al lado de la informacion -->                   
                      <div class="col-12">                      
                         <img src = "/src/andresillo.jpg" width= "100px" height= "100px" alt="Facebook profile picture">
                         <br>
@@ -70,6 +71,7 @@
                         <div class="col"><h3>Longboarding</h3></div>
                         <div class="col"><a>I love go outside with my longboard, roam through the city and feel wind in my face, but I haven't so much time to do this. The next video is an example of this activity: </a></div>
                         <div class="col-4">    
+                        <!-- El video quedaria mejor centrado y con más tamaño -->
                         <div class="video-container"><iframe frameborder="0" scrolling="no" width="569.6" height="320" type="text/html" src="https://www.youtube.com/embed/RVkqTuNEbhs?autoplay=0&fs=1&iv_load_policy=3&showinfo=1&rel=1&cc_load_policy=0&start=12&end=0&"></iframe>
                         </div>
                         </div>
